k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monica
  labels:
    app.kubernetes.io/name: monica
